--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body, h1, h2, h3, p, ul, li {
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 header {
@@ -41,7 +41,7 @@ nav a {
 .cta-button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #f39c12;
+    background-color: #52A88D;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
@@ -51,16 +51,24 @@ nav a {
 .featured-properties {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: start;
     padding: 50px 0;
+    flex-direction: column;
+    margin: 32px;
+    gap: 1rem;
 }
 
 .property-card {
-    width: 30%;
+    width: 40%;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.property-cards {
+    display: flex;
+    gap: 2rem;
 }
 
 .property-card img {
