--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ nav a {
     background-position: center;
     text-align: center;
     padding: 100px 0;
-    color: #fff;
+    color: rgb(44, 43, 43);
 }
 
 .cta-button {
