--- a/style.css
+++ b/style.css
@@ -29,23 +29,40 @@ nav a {
     text-decoration: none;
 }
 
+ul {
+    margin-left: 1rem;
+}
+
 .hero {
-    background-image: url('hero-image.jpg');
-    background-size: cover;
-    background-position: center;
+    background: url('./img/Banner.svg') center/cover no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    color: #fff;
     text-align: center;
-    padding: 100px 0;
-    color: rgb(44, 43, 43);
+}
+
+.hero h2 {
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+}
+
+.hero p {
+    font-size: 1.25rem;
+    margin-bottom: 20px;
 }
 
 .cta-button {
     display: inline-block;
-    padding: 10px 20px;
-    background-color: #52A88D;
+    background-color: #007BFF;
     color: #fff;
-    text-decoration: none;
+    padding: 10px 20px;
     border-radius: 5px;
-    margin-top: 20px;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1rem;
 }
 
 .featured-properties {
