--- a/style.css
+++ b/style.css
@@ -9,10 +9,15 @@ body {
 }
 
 header {
-    background-color: #333;
+    display: flex;
+    background-color: #2F8163;
+    font-size: 1rem;
     color: #fff;
-    padding: 10px 0;
+    padding: 1rem 1rem;
     text-align: center;
+
+    justify-content: space-between;
+    align-items: center;
 }
 
 nav ul {
@@ -31,6 +36,10 @@ nav a {
 
 ul {
     margin-left: 1rem;
+}
+
+header h1{
+ font-size: 1.4rem;
 }
 
 .hero {
@@ -56,7 +65,7 @@ ul {
 
 .cta-button {
     display: inline-block;
-    background-color: #007BFF;
+    background-color: #2F8163;
     color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
