--- a/style.css
+++ b/style.css
@@ -20,6 +20,16 @@ header {
     align-items: center;
 }
 
+header .logomanuel{
+    display: flex;
+    align-items: center;
+}
+
+header .logo{
+    width: 2.6rem;
+    height: 2.6rem;
+}
+
 nav ul {
     list-style: none;
 }
@@ -32,6 +42,8 @@ nav li {
 nav a {
     color: #fff;
     text-decoration: none;
+    font-weight: 500;
+
 }
 
 ul {
@@ -40,7 +52,14 @@ ul {
 
 header h1{
  font-size: 1.4rem;
+ font-weight: 600;
+
 }
+
+header span{
+    font-size: 1rem;
+    font-weight: 400;
+   }
 
 .hero {
     background: url('./img/Banner.svg') center/cover no-repeat;
